src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

html,
body,
div#app {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #222;
  font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
  font-size: 13px;
  color: #fff;
}

div#editor-part {
  width: 100%;
  height: 100%;
}

div#editor-top-bar {
  display: grid;
  grid-template-columns: auto auto auto 1fr;
  font-size: 17px;
}

div.tab {
  display: flex;
  cursor: pointer;
  line-height: 40px;
  padding: 0 35px;
  user-select: none;
}

div.editor {
  max-width: 100%;
  max-height: 100%;
  min-height: 100%;
}

div#preview-part {
  position: relative;
  flex: 1;
}

iframe#preview {
  width: 100%;
  height: 100%;
  border: none;
}

